codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---



























• I’m going to search the repo for where “Change Approved” is rendered to update
  that view.
• Explored                                      │CONTEXT LEDGER  Total ≈0 tokens
  └ Search Change Approved                      │admitted
    Read diff_render.rs                         │
• Investigating rendering code (0s • esc to int…│No portable context is
                                                │available.
┌──────────────────────────────────────────────┐│ACTIVE FILES  ≈0 tokens
› Summarize recent commits                     ││admitted
└──────────────────────────────────────────────┘│No sources available.
  tab to queue message                          │
                                                │DURABLE MEMORY  ≈0 tokens
 Elpis · model gpt-5.6-sol · location /tmp/proje│admitted
