codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__esc_interrupt_goal_paused_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: snapshot
---
" Elpis · model gpt-5.6-sol · context 0% · location /tmp/project · Shift+Tab Cont"
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"› Ask Codex to do anything                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"  ? for shortcuts                                            100% context left  "
