codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_switch_prompt_popup.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: popup
---
┌──────────────────────────────────────────────┐│CONTEXT LEDGER  Total ≈0 tokens
│ Approaching rate limits                      ││admitted
│ Switch to gpt-5.6-luna for lower credit usag ││
│                                              ││No portable context is
› 1. Switch to gpt-5.6-luna     Fast and       ││available.
                                affordable     ││ACTIVE FILES  ≈0 tokens
                                agentic coding ││admitted
                                model.         ││No sources available.
  2. Keep current model                        ││
  3. Keep current model (never… Hide future    ││DURABLE MEMORY  ≈0 tokens
                                rate limit     ││admitted
                                reminders      ││No sources available.
                                about          ││
                                switching      ││INSTRUCTIONS  ≈0 tokens
                                models.        │
└──────────────────────────────────────────────┘
  Press enter to confirm or esc to go back

 Elpis · model gpt-5 · location /tmp/project
